--- a/_posts/2019-03-19-rinux-study-001.markdown
+++ b/_posts/2019-03-19-rinux-study-001.markdown
@@ -5,12 +5,12 @@ date:   2014-04-06 15:40:56
 categories : unknown
 ---
 
-리눅스란? 
+<h4>리눅스란?</h4> 
 윈도우나 맥같은 운영체제이자 운영체제의 핵심부분인 커널을 의미한다.
 일반적으로 사용 가능한 형태로 배포되는 '리눅스'는 정확히 말해 리눅스 배포판을 의미한다.
 전 세계적으로 가장 인기있는 리눅스 배포판은 Ubuntu 임.
 
-Ubuntu?
+<h4>Ubuntu?</h4>
 또 다른 리눅스 배포판인 데비안 GNU/리눅스를 기반으로 만들어졌음.
 유니티라는 데스크탑 관리자를 사용하여 그래픽 데스크탑 환경을 제공하며 마우스를 이용해서 직관적인 조작이 가능함.
 시스템 엄데이터가 편리. 클릭 한번으로 시스템 업데이트가 가능함.
