--- a/_posts/2019-07-11-카테고리 추가.markdown
+++ b/_posts/2019-07-11-카테고리 추가.markdown
@@ -2,5 +2,6 @@
 layout: post
 title:  "깃(Git) 블로그 Category 추가하는 과정 포스팅"
 date:   2019-07-11
-categories : GitCustomizing
+categories:
+- GitCustomizing
 ---
