update categories name

--- a/_posts/2019-03-19-Linux-study-001.markdown
+++ b/_posts/2019-03-19-Linux-study-001.markdown
@@ -2,8 +2,7 @@
 layout: post
 title:  "What is Ubuntu?"
 date:   2014-04-06 15:40:56
-categories:
-- Linux
+categories: Linux
 ---
 
 <span class="evidence">리눅스란?</span>  
