--- a/_posts/2019-08-15-sql-tuning-04.markdown
+++ b/_posts/2019-08-15-sql-tuning-04.markdown
@@ -26,21 +26,23 @@ categories: SQL튜닝
 
 ## 2.1.2 인덱스 구조
 ---
-인덱스를 이용하면 일부만 읽고 멈출 수 있는 범위 스캔(Range Scan)이 가능하다. 범위스캔이 가능한 이유는 인덱스가 정렬되어 있기 때문이다.  
+인덱스를 이용하면 일부만 읽고 멈출 수 있는 범위 스캔(Range Scan)이 가능하다.  
+범위스캔이 가능한 이유는 인덱스가 정렬되어 있기 때문이다.  
 DBMS는 일반적으로 B*Tree 인덱스를 사용한다.
 
-루트와 브랜치 블록에 있는 각 레코드는 하위 블록에 대한 주소값을 갖는다. 키값은 하위 블록에 저장된 키값의 범위를 나타낸다.  
+루트와 브랜치 블록에 있는 각 레코드는 하위 블록에 대한 주소값을 갖는다.  
+키값은 하위 블록에 저장된 키값의 범위를 나타낸다.  
 리프블록에 저장된 각 레코드는 키값 순으로 정렬되어있을 뿐만 아니라 테이블 레코드가 가리키는 주소값, 즉 ROW ID를 갖는다. 
 
-> ROWID = 데이터 블록 주소 + 로우 번호
-> 데이터 블록 주소 = 데이터 파일 번호 + 블록 번호
-> 블록번호 : 데이터파일 내에서 부여한 상대적 순번
-> 로우번호 : 블록 내 순번 
+> ROWID = 데이터 블록 주소 + 로우 번호  
+> 데이터 블록 주소 = 데이터 파일 번호 + 블록 번호  
+> 블록번호 : 데이터파일 내에서 부여한 상대적 순번  
+> 로우번호 : 블록 내 순번  
 
 <br>
 **인덱스 탐색 과정**
-> 수직적 탐색 : 인덱스 스캔 시작지점을 찾는 과정. 
-> 수평적 탐색 : 데이터를 찾는 과정
+> 수직적 탐색 : 인덱스 스캔 시작지점을 찾는 과정.  
+> 수평적 탐색 : 데이터를 찾는 과정  
 
 <br>
 <br>
