--- a/_posts/2019-08-14-sql-tuning-03.markdown
+++ b/_posts/2019-08-14-sql-tuning-03.markdown
@@ -107,3 +107,13 @@ show sga
   
   
   
+<br>
+<br>
+<br>
+<br>
+![img01]({{ site.baseurl }}/images/post/sqlTuning/book/bookCover.PNG)<br>
+<br>
+본 포스팅은 친절한 SQL 튜닝 온라인 스터디를 진행하면서 공부한 내용을 바탕으로 작성하였습니다.<br>
+<br>
+<br>
+<br>
