--- a/_posts/2019-08-15-sql-tuning-04.markdown
+++ b/_posts/2019-08-15-sql-tuning-04.markdown
@@ -68,3 +68,16 @@ DBMS는 일반적으로 B*Tree 인덱스를 사용한다.
 ---
 두개이상의 컬럼을 결합해서 인덱스를 만들 수 있다.  
 책에 있는 그림과 설명을 봐야 이해가 수월한데.. 간단히 정리하자면 인덱스에서 남자 '이재희' 고객을 찾을때 인덱스를 [성별+이름]로 구성하던 [이름+성별]로 구성하든 읽는 인덱스 블록 개수가 똑같다는 사실이다. 인덱스를 어떻게 구성하든 블록 I/O 개수가 같으므로 성능도 똑같다. DBMS에서 사용하는 B*Tree 인덱스는 엑셀처럼 평면구조가 아니고 다단계 구조(루트,브랜치,리프)이기 때문이다.  
+  
+  
+  
+<br>
+<br>
+<br>
+<br>
+![img01]({{ site.baseurl }}/images/post/sqlTuning/book/bookCover.PNG)<br>
+<br>
+본 포스팅은 친절한 SQL 튜닝 온라인 스터디를 진행하면서 공부한 내용을 바탕으로 작성하였습니다.<br>
+<br>
+<br>
+<br>
