--- a/_posts/2019-08-19-sql-tuning-05.markdown
+++ b/_posts/2019-08-19-sql-tuning-05.markdown
@@ -47,3 +47,13 @@ Index Range Scan에서 'Range'는 범위를 의미하며 일정 범위를 스캔
 <br>
 ## 2.2.5 ORDER BY 절에서 컬럼 가공
 ---
+<br>
+<br>
+<br>
+<br>
+![img01]({{ site.baseurl }}/images/post/sqlTuning/book/bookCover.PNG)<br>
+<br>
+본 포스팅은 친절한 SQL 튜닝 온라인 스터디를 진행하면서 공부한 내용을 바탕으로 작성하였습니다.<br>
+<br>
+<br>
+<br>
