--- a/_posts/2019-08-19-sql-tuning-05.markdown
+++ b/_posts/2019-08-19-sql-tuning-05.markdown
@@ -47,6 +47,30 @@ Index Range Scan에서 'Range'는 범위를 의미하며 일정 범위를 스캔
 <br>
 ## 2.2.5 ORDER BY 절에서 컬럼 가공
 ---
+ORDER BY 또는 SELECT-LIST에서 컬럼을 가공함으로 인해 인덱스를 정상적으로 사용할 수 없는 경우도 종종 있다.  
+인덱스에는 가공하지 않은 상태로 값을 저장했는데, ORDER BY절에 가공한 값 기준으로 정렬을 요청하는 경우에도 그렇다.  
+<br>
+<br>
+<br>
+## 2.2.6 SELECT-LIST에서 컬럼 가공 
+---
+MIN값이나 MAX값을 구할 때 인덱스를 이용해 정렬 연산 없이 최소 또는 최댓값을 구할 수 있다.  
+인덱스 리프 블록의 왼쪽(MIN) 또는 오른쪽(MAX)에서 레코드 하나(FIRST ROW)만 읽고 멈춘다.  
+그러나 인덱스에는 변경순번이 문자열 기준으로 정렬되어있는데, 이를 숫자값으로 바꾼 값 기준으로 변경순번 정렬을 요구하면 정렬연산을 생략할 수 없다.  
+```sql
+SELECT NVL(MAX(TO_NUMBER(변경순번)),0)
+FROM   상태변경이력
+```
+<br>
+<br>
+<br>
+## 2.2.7 자동 형변환
+---
+예를들어 어떤 컬럼이 문자형인데 조건절 비교값을 숫자형으로 표현한 경우, 결과적으로 인덱스 컬럼이 가공됐기 대문에 인덱스를 Range Scan 할 수 없다. 
+오라클에서 숫자형과 문자형이 만나면 숫자형이 Win! 즉, 숫자형 컬럼 기준으로 문자형 컬럼을 변환한다.  
+연산자가 LIKE일때는 LIKE 자체가 문자열 비교 연산자이므로 이때는 문자형 기준으로 숫자형 컬럼이 변환된다.  
+LIKE 조건으로 검색하면 자동 형변환이 발생해 인덱스 액세스 조건으로 사용되지 못하는 경우가 있기 때문에 주의해야한다.  
+이외에도 자동형변환 때문에 성능과 애플리케이션 품질에 종종 문제가 생기기 때문에 인덱스 컬럼 기준으로 반대편 컬럼 또는 값을 정확히 형변환 해주어야 한다.
 <br>
 <br>
 <br>
