--- a/_posts/2019-08-19-sql-tuning-06.markdown
+++ b/_posts/2019-08-19-sql-tuning-06.markdown
@@ -31,6 +31,8 @@ Unique 인덱스가 존재하는 컬럼은 중복 값이 입력되지 않게 DBM
 인덱스 선두 컬럼을 조건절에서 사용하지 않으면 옵티마이저는 기본적을 Table Full Scan을 선택한다.
 오라클은 인덱스 선두 컬럼이 조건절에 없어도 인덱스를 활용하는 새로운 스캔방식을 9i 버전에서 선보였는데, Index Skip Scan이 바로 그것이다.  
 이 스캔방식은 조건절에 빠진 인덱스 선두 컬럼의 Distinct Value(ex. 성별:남,여) 개수가 적고 후행 컬럼의 Distinct Value(ex. 고객번호:0001,0002,0003,...1359) 개수가 많을 때 유용하다.  
+Index Skip Scan은 루트 또는 브랜치 블록에서 읽은 컬럼 값 정보를 이용해 조건절에 부합하는 레코드를 포함할 '가능성이 있는' 리프 블록만 골라서 액세스하는 스캔방식이다.  
+But.. 인덱스 선두 컬럼이 없을때만 작동하는것은 아니고 선두컬럼에 대한 조건절은 있고 중간컬럼에 대한 조건절이 없는 경우 등 몇가지 경우가 있다.  
 
 <br>
 <br>
