--- a/_posts/2019-08-19-sql-tuning-06.markdown
+++ b/_posts/2019-08-19-sql-tuning-06.markdown
@@ -33,7 +33,22 @@ Unique 인덱스가 존재하는 컬럼은 중복 값이 입력되지 않게 DBM
 이 스캔방식은 조건절에 빠진 인덱스 선두 컬럼의 Distinct Value(ex. 성별:남,여) 개수가 적고 후행 컬럼의 Distinct Value(ex. 고객번호:0001,0002,0003,...1359) 개수가 많을 때 유용하다.  
 Index Skip Scan은 루트 또는 브랜치 블록에서 읽은 컬럼 값 정보를 이용해 조건절에 부합하는 레코드를 포함할 '가능성이 있는' 리프 블록만 골라서 액세스하는 스캔방식이다.  
 But.. 인덱스 선두 컬럼이 없을때만 작동하는것은 아니고 선두컬럼에 대한 조건절은 있고 중간컬럼에 대한 조건절이 없는 경우 등 몇가지 경우가 있다.  
-
+<br>
+<br>
+<br>
+## 2.3.5 Index Fast Full Scan
+---
+Index Fast Full Scan은 Index Full Scan보다 빠르다.  
+논리적인 인덱스 트리 구조를 무시하고 인덱스 세그먼트 전체를 Multiblock I/O 방식으로 스캔하기 때문에 대량의 인덱스 블록을 읽어야 할 때 큰 효과를 발휘.  
+그러나 리스트 구조를 무시한 채 디스크를 데이터를 읽기때문에 결과집합이 인덱스 키 순서대로 정렬되지 않음.  
+또한 쿼리에 사용한 컬럼이 모두 인덱스에 포함되어있을때만 사용할 수 있다. 
+<br>
+<br>
+<br>
+## 2.3.6 Index Range Scan Descending
+---
+Index Range Scan과 기본적으로 동일한 스캔방식.  
+인덱스를 뒤에서부터 앞쪽으로 스캔하기 때문에 내림차순으로 정렬된 결과집합을 얻는다.
 <br>
 <br>
 <br>
