--- a/_posts/2019-08-27-sql-tuning-09.markdown
+++ b/_posts/2019-08-27-sql-tuning-09.markdown
@@ -39,6 +39,31 @@ SQL 트레이스를 통해 알 수 있는데 cr이 읽은 블록 개수다.
 <br>
 <br>
 <br>
+## 3.3.5 인덱스 선행 컬럼이 등치(=)조건이 아닐 때 생기는 비효율
+---
+인덱스 스캔의 효율성은 인덱스 컬럼을 조건절에 모두 등치(=) 조건으로 사용할 때 가장 좋다.  
+인덱스 선행 컬럼이 모두 '=' 조건일 때 필요한 범위만 스캔하고 멈출 수 있는것은, 조건을 만족하는 레코드가 모두 한데 모여있기 때문이다.  
+<br>
+<br>
+<br>
+## 3.3.6 BETWEEN을 IN-List로 전환
+---
+범위검색 컬럼이 맨 뒤로 가도록 인덱스를 구성 순서를 변경하면 좋겠지만 운영 시스템에서는 쉽지않다.  
+이럴때 BETWEEN 조건을 IN-List로 바꿔주면 큰 효과를 얻는 경우가 있다.  
+ex) where 인터넷매물 in ('1','2','3');  
+IN-List 개수만큼 UNION ALL 브랜치가 생성되고 각 브랜치마다 모든 컬럼을 '='조건으로 검색하므로 선두컬럼에 BETWEEN을 사용할 때와 같은 비효율이 사라진다.
+BETWEEN 조건을 IN-List로 전환할 때 주의사항은 책을 참고하자..  
+<br>
+<br>
+<br>
+## 3.3.7 Index Skip Scan 활용
+---
+BETWEEN 조건을 IN-List 조건으로 변환하면 도움이 되는 상황에서 굳이 조건절을 바꾸지 않고도 같은 효과를 내는 방법은 Index Skin Scan을 활용하는 것이다.  
+Index Skip Scan이 IN-List보다 오히려 나은 경우도 있다.  
+선두 컬럼이 BETWEEN이어서 나머지 검색 조건을 만족하는 데이터들이 서로 멀리 떨어져 있을 때, Index Skip Scan의 위력이 나타난다.  
+<br>
+<br>
+<br>
 <br>
 ![img01]({{ site.baseurl }}/images/post/sqlTuning/book/bookCover.PNG)<br>
 <br>
