--- a/_posts/2019-08-27-sql-tuning-09.markdown
+++ b/_posts/2019-08-27-sql-tuning-09.markdown
@@ -64,6 +64,77 @@ Index Skip Scan이 IN-List보다 오히려 나은 경우도 있다.
 <br>
 <br>
 <br>
+## 3.3.8 IN 조건은 '=' 인가
+---
+IN 조건은 '='이 아니다. 따라서 인덱스를 어떻게 구성하느냐에 따라 성능도 달라질 수 있다.  
+IN 조건이 '='이 되려면 IN-List Iterator 방식으로 풀려야만 한다. 그렇지 않으면 IN 조건은 필터조건이다.  
+하지만 IN 조건을 '='조건으로 만들기 위해, 즉 액세스 조건으로 만들기 위해 IN-List Iterator방식으로 푸는 것이 항상 효과적인것은 아니다.  
+데이터가 아주 많은 경우에는 IN 조건을 액세스 조건으로 사용하는것이 낫고, 그렇지 않은 경우에는 필터 방식으로 처리되는게 낫다.  
+<br>
+<br>
+<br>
+## 3.3.9 BETWEEN과 LIKE 스캔 범위 비교
+---
+LIKE와 BETWEEN은 둘 다 범위검색 조건이다. LIKE보다 BETWEEN을 사용하는것이 낫다.  
+자세한 설명은 책 참고~  
+<br>
+<br>
+<br>
+## 3.3.10 범위검색 조건을 남용할 때 생기는 비효율
+---
+인덱스 컬럼에 범위조건 검색을 남용하면 인덱스 스캔 비효율이 생긴다.  
+인덱스 스캔 비효율이 성능에 미치는 영향이 적을 수도 있지만, 대량의 테이블을 넓은 범위로 검색할 때는 그 영향이 매우 클 수도 있다.  
+따라서 SQL을 작성할 때 데이터 분포에 따라 인덱스 컬럼에 대한 비교 연산자를 신중하게 선택해야한다.  
+<br>
+<br>
+<br>
+## 3.3.11 다양한 옵션 조건 처리 방식의 장단점 비교
+---
+### OR조건
+인덱스 선두 컬럼에 대한 옵션 조건에 OR 조건을 사용해선 안된다.  
+인덱스에 포함되지 않은 컬럼에 대한 옵션조건은 테이블에서 필터링할 수 밖에 없으므로 OR조건을 사용해도 무방.  
+**OR 조건을 활용한 옵션 조건 처리**
+> 인덱스 액세스 조건으로 사용 불가  
+> 인덱스 필터 조건으로도 사용 불가  
+> 테이블 필터 조건으로만 사용 가능  
+참고로 OR-Expansion을 통해 인덱스 사용이 가능하도록 OR조건 형태를 만들 수 있음. 그 방법은 책 설명 참고.  
+<br>
+### LIKE/BETWEEN 조건 활용
+필수 조건 컬럼을 인덱스 선두에 두고 액세스 조건으로 사용하면, LIKE/BETWEEN이 인덱스 필터 조건이어도 충분히 좋은 성능을 낼 수 있다.  
+**LIKE/BETWEEN 패턴을 사용하고자 할때 아래 네가지 경우에 속하는지 반드시 점검 필요**
+> 인덱스 선두 컬럼에 대한 옵션 조건을 LIKE/BETWEEN 연산자로 처리하는것은 금물.  
+> NULL 허용 컬럼에 대한 옵션 조건을 LIKE/BETWEEN 연산자로 처리하는것도 금물.  
+> 숫자형이면서 인덱스 액세스 조건으로도 사용 가능한 컬럼에 대한 옵션 조건 처리는 LIKE 방식을 사용해서는 안됨.  
+> LIKE를 옵션 조건에 사용할 때는 컬럼 값 길이가 고정적이어야 한다.
+<br>
+### UNION ALL 활용
+UNION ALL 방식은 옵션 조건 컬럼도 인덱스 액세스 조건으로 사용한다는 사실이 매우 중요.  
+<br>
+### NVL/DECODE 함수 활용 
+UNION ALL보다 단순하면서도 UNION ALL과 같은 성능을 낸다.  
+단점은 NULL 허용 컬럼에 사용할 수 없다. 조건절 변수에 NULL을 입력하면 값이 NULL인 레코드가 결과집합에서 누락되기 때문이다.  
+자세한 내용은 책 참고.  
+<br>
+<br>
+<br>
+## 3.3.12 함수호출부하 해소를 위한 인덱스 구성
+---
+### PL/SQL 함수의 성능적 특성
+**PL/SQL 사용자 정의 함수가 느린 이유 3가지**
+> 가상머신(VM)상에서 실행되는 인터프리터 언어  
+> 호출시마다 컨텍스트 스위칭 발생  
+> 내장 SQL에 대한 Recursive Call 발생  
+대개 PL/SQL 함수에는 SQL이 내장되어있으므로 일반적으로 인터프리팅, 컨텍스트 스위칭보다 Recursive Call부하가 가장 크다.  
+PL/SQL 함수를 쓰지않고 조인문으로 처리하면 성능이 훨씬 좋은 경우도 있다. 함수가 무조건 좋은것은 아니다.  
+<br>
+<br>
+<br>
+## 3.3.7 Index Skip Scan 활용
+---
+
+<br>
+<br>
+<br>
 <br>
 ![img01]({{ site.baseurl }}/images/post/sqlTuning/book/bookCover.PNG)<br>
 <br>
