--- a/_posts/2019-09-17-sql-tunning-10.markdown
+++ b/_posts/2019-09-17-sql-tunning-10.markdown
@@ -6,7 +6,7 @@ categories: SQL튜닝
 ---  
 ## 3.4.1 인덱스 설계가 어려운 이유
 ---  
-*인덱스가 많으면 생기는 문제*  
+**인덱스가 많으면 생기는 문제**  
 
 > DML 성능 저하 (TPS 저하)  
 > 데이터베이스 사이즈 증가 (디스크 공간 낭비)  
@@ -17,15 +17,16 @@ categories: SQL튜닝
 꼭 필요하지 않은 인덱스를 많이 만들면 디스크 공간을 낭비하고,  
 데이터베이스 사이즈가 커지는 만큼 백업, 복제, 재구성 등을 위한 운영 비용도 상승한다.  
 개별 쿼리 성능 뿐만 아니라 그 개수를 최소화함으로써 DML 부하를 줄여야 하므로 인덱스 설계가 어렵다.  
-  
+<br>  
 인덱스 추가는 시스템에 부하를 주고, 인덱스 변경은 운영 리스크가 크다..  
+<br>
 ---  
 ## 3.4.2 가장 중요한 두 가지 선택 기준
 --- 
 인덱스 스캔 방식에 여러가지가 있지만 가장 정상적이고 일반적인 방식은 Index Rage Scan.  
 이를 위해서는 인덱스 선두 컬럼을 조건절에 반드시 사용해야 한다.  
 따라서 결합 인덱스를 구성할 때 두가지 조건을 공식처럼 외워야 한다.  
-*인덱스 스캔 효율성 판단 기준*  
+**인덱스 스캔 효율성 판단 기준**  
 1. 조건절에 항상 사용하거나, 자주 사용하는 컬럼을 선정한다.  
 2. '=' 조건으로 자주 조회하는 컬럼을 앞쪽에 둔다.  
 <br>
