--- a/_posts/2019-09-17-sql-tunning-10.markdown
+++ b/_posts/2019-09-17-sql-tunning-10.markdown
@@ -45,21 +45,23 @@ categories: SQL튜닝
 ---  
 SQL 튜닝 전문가라면, 열개 중 최적을 달성해야 할 가장 핵심적인 액세스 경로 한두 개를 전략적으로 선택해서 최적 인덱스를 설계하고, 나머지 액세스 경로는 약간의 비효율이 있더라도 목표 성능을 만족하는 수준으로 인덱스를 구성할 수 있어야 한다.  
 예제는 책 참고..  
-인덱스 개수를 최소화 하면, 사용빈도가 높거나 중요한 액세스 경로가 새로 도출됐을 때 최적의 인덱스를 추가할 여유도 생긴다.
+<br>
+인덱스 개수를 최소화 하면, 사용빈도가 높거나 중요한 액세스 경로가 새로 도출됐을 때 최적의 인덱스를 추가할 여유도 생긴다.  
 ---  
 ## 3.4.5 소트 연산을 생략하기 위한 컬럼 추가
 ---  
 인덱스는 항상 정렬 상태를 유지하므로 ORDER BY, GROUP BY를 위한 소트 연산을 생략할 수 있게 해준다.  
 따라서 조건절에 사용하지 않는 컬럼이라도 소트 연산을 생략할 목적으로 인덱스 구성에 포함시킴으로써 성능 개선을 도모할 수 있다.  
-*'='이 아닌 조건절 컬럼들은 반드시 ORDER BY 컬럼보다 뒤쪽에 두어야 소트 연산을 생략할 수 있다.*  
+**'='이 아닌 조건절 컬럼들은 반드시 ORDER BY 컬럼보다 뒤쪽에 두어야 소트 연산을 생략할 수 있다.**  
 <br>
-*I/O를 최소화하면서도 소트 연산을 생략하려면, 아래 공식에 따라 인덱스를 구성하면 된다.*
+**I/O를 최소화하면서도 소트 연산을 생략하려면, 아래 공식에 따라 인덱스를 구성하면 된다.**
 > '=' 연산자로 사용한 조건절 컬럼 선정  
 > ORDER BY 절에 기술한 컬럼 추가  
-> '=' 연산자가 아닌 조건절 컬럼은 데이터 분포를 고려해 추가 여부 결정  
-<br>
-*IN 조건은 '='이 아니다.*  
+> '=' 연산자가 아닌 조건절 컬럼은 데이터 분포를 고려해 추가 여부 결정
+<br>  
+**IN 조건은 '='이 아니다.**  
 소트 연산을 생략하려면 IN 조건절이 IN-List Iterator 방식으로 풀려선 안된다. 즉, IN 조건절을 인덱스 액세스 조건으로 사용하면 안된다. 필터 조건으로 사용해야 한다.  
+  
 ---  
 ## 3.4.6 결합 인덱스 선택도
 ---  
